syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.br.order";
option java_outer_classname = "ProductServiceProto";

service ProductService {
  rpc GetProducts (ProductsRequest) returns (ProductsResponse);
}

message ProductsRequest {
  repeated ProductRequest products = 1;
}

message ProductRequest {
   int32 id = 1;
   int32 qtd = 2;
}

message ProductsResponse {
  repeated ProductResponse products = 1;
}

message ProductResponse {
  int32 id = 1;
  string name = 2;
  double price = 3;
  string description = 4;
}